--- a/less/global.less
+++ b/less/global.less
@@ -7,21 +7,23 @@ html {
 }
 
 html, body {
-  font-family: 'Ubuntu', sans-serif;
-  color: @main-font-color;
+font-family: 'Open Sans Condensed', sans-serif;
+  color: black;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Russo One', sans-serif;
-  color: @header-font-color;
+font-family: 'Amatic SC', cursive;
+  color: black;
 }
-
+h1{
+  font-size: 7rem;
+}
 h2 {
-  font-size: 3.2rem;
+  font-size: 4.5rem;
 }
 
 h3 {
-  font-size: 2.8rem;
+  font-size: 3.5rem;
 }
 
 p {
