commiting less, index, and css index files

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -55,3 +55,17 @@ img {
 .right-content {
     padding: 20px;
 }
+
+
+.banner p {
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    border: 1px solid black;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 6rem;
+    background-color: #999999;
+}
