moved keyframes to the mixin less file

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,3 +10,13 @@ background-color: @bgc;
 color: @tcolor;
 height: @height;
 }
+
+@keyframes headcolor {
+  from {
+    text-shadow: inherit;
+  }
+
+  to {
+    text-shadow: 2px 2px @Beige;
+  }
+}
