added styling to the page at the 500px media breakpoint

--- a/less/global.less
+++ b/less/global.less
@@ -9,6 +9,11 @@ html {
 html, body {
 font-family: 'Open Sans Condensed', sans-serif;
   color: black;
+
+@media @phone {
+  margin-right: 5px;
+  margin-left: 5px;
+}
 }
 
 h1, h2, h3, h4, h5 {
