--- a/less/global.less
+++ b/less/global.less
@@ -25,6 +25,10 @@ h1{
 }
 h2 {
   font-size: 4.5rem;
+  
+  @media @tablet {
+    font-size: 6rem;
+  }
 }
 
 h3 {
@@ -34,4 +38,9 @@ h3 {
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+
+  @media @tablet {
+    width: 85%;
+    margin: 20px auto;
+  }
 }
