--- a/less/homepage.less
+++ b/less/homepage.less
@@ -5,10 +5,15 @@ a{
   color: @1020;
 
   @media @phone {
-    padding: 10px;
+    padding: 5px;
     margin-right: 40px;
-    text-decoration: blink;
     font-size: 3rem;
+  }
+
+  @media @tablet {
+    margin-left: 20px;
+    padding: 5px;
+    font-size: 2.5rem;
   }
 }
 
@@ -16,6 +21,15 @@ a{
   display: flex;
   justify-content: flex-end;
   padding-right: 8rem;
+  margin-top: 18px;
+
+  @media @phone {
+    .flexCenter();
+  }
+
+  @media @tablet {
+    .flexCenter();
+  }
 }
 
 h1, p, .midPageTxt{
@@ -35,6 +49,10 @@ h1{
   @media @phone {
   padding-top: 2rem;
   }
+
+  @media @tablet {
+    font-size: 10rem;
+  }
 }
 
 .midPageTxt{
@@ -53,12 +71,22 @@ h1{
     flex-wrap: wrap;
     align-items: center;
   }
+
+  @media @tablet {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
 }
 
 .photoPbox {
   width: 35rem;
   height: auto;
   // border: 2px solid green;
+
+  @media @tablet {
+    width: 75%;
+  }
 }
 
 .photoPbox img {
@@ -75,6 +103,13 @@ h3 {
   @media @phone {
     margin-top: 8px;
     margin-bottom: 8px;
+  }
+
+  @media @tablet {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 6rem;
   }
 }
 
@@ -108,10 +143,16 @@ position: absolute;
  @media @phone {
   width: 100%;
 }
+
+  @media @tablet {
+    height: 100px;
+    width: 80%;
+  }
 }
 
 .imgText h2 {
-  color: @Kitty-boots;
+  color: @pineapple;
+  text-shadow: 2px 2px #000000;
 
   @media @phone {
     margin-top: 50px;
