--- a/less/variables.less
+++ b/less/variables.less
@@ -9,6 +9,7 @@
 @Button-nose: #D8B477;
 @Beige: #BA906D;
 @1020: #7B3D4C;
+@pineapple: #EDC765;
 // Mobile var
 @phone: ~"(max-width: 500px)";
 @tablet: ~"(max-width: 800px)";
