--- a/less/homepage.less
+++ b/less/homepage.less
@@ -28,7 +28,7 @@ a{
   }
 
   @media @tablet {
-    .flexCenter();
+    margin-left: 100px;
   }
 }
 
@@ -40,19 +40,6 @@ h1, p, .midPageTxt{
   border-bottom: 1.5px solid @1020;
   padding-bottom: 3rem;
   margin-bottom: 1rem;
-}
-
-h1{
-  padding-bottom: 2rem;
-  padding-top: 3rem;
-
-  @media @phone {
-  padding-top: 2rem;
-  }
-
-  @media @tablet {
-    font-size: 10rem;
-  }
 }
 
 .midPageTxt{
@@ -155,6 +142,6 @@ position: absolute;
   text-shadow: 2px 2px #000000;
 
   @media @phone {
-    margin-top: 50px;
+    font-size: 4rem;
   }
 }
