--- a/less/global.less
+++ b/less/global.less
@@ -20,14 +20,18 @@ h1, h2, h3, h4, h5 {
 font-family: 'Amatic SC', cursive;
   color: black;
 }
+
 h1{
   font-size: 7rem;
+  padding-bottom: 2rem;
+  padding-top: 3rem;
 }
+
 h2 {
   font-size: 4.5rem;
   
   @media @tablet {
-    font-size: 6rem;
+    font-size: 4.5rem;
   }
 }
 
