--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,65 @@ p {
   font-size: 1.6rem;
   line-height: 1.4;
 }
+.overlay {
+  height: 0%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-y: hidden;
+  transition: 0.5s;
+}
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.overlay a {
+  padding: 0;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: flex;
+  flex-direction: row;
+  transition: 0.3s;
+}
+span {
+  display: flex;
+  justify-content: center;
+  padding-top: 3rem;
+}
+.overlay a:hover,
+.overlay a:focus {
+  color: #f1f1f1;
+}
+.overlay .closebtn {
+  position: absolute;
+  top: 2px;
+  right: 45px;
+  font-size: 60px;
+}
+@media (max-width: 500px) {
+  .overlay {
+    overflow-y: auto;
+  }
+  .overlay a {
+    font-size: 20px;
+  }
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
 footer {
   display: flex;
   justify-content: center;
@@ -182,13 +241,6 @@ footer {
   text-decoration: none;
   margin: 5px 2px;
   color: black;
-}
-a {
-  font-size: 2rem;
-  padding-right: 2rem;
-  text-decoration: none;
-  color: #7B3D4C;
-  font-size: 2.25rem;
 }
 .navBox {
   display: flex;
