--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,10 +1,10 @@
-a{
-  font-size: 2rem;
-  padding-right: 2rem;
-  text-decoration: none;
-  color: @1020;
-  font-size: 2.25rem;
-}
+// a{
+//   font-size: 2rem;
+//   padding-right: 2rem;
+//   text-decoration: none;
+//   color: @1020;
+//   font-size: 2.25rem;
+// }
 
 .navBox{
   display: flex;
