--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,10 +1,7 @@
-// a{
-//   font-size: 2rem;
-//   padding-right: 2rem;
-//   text-decoration: none;
-//   color: @1020;
-//   font-size: 2.25rem;
-// }
+img .line{
+  border: 2px solid black;
+
+}
 
 .navBox{
   display: flex;
@@ -16,7 +13,7 @@ h1, p, .midPageTxt{
   .flexCenter();
 }
 .h1Mission{
-  border-bottom: 1.5px solid @1020;
+  // border-bottom: 1.5px solid @1020;
   padding-bottom: 3rem;
   margin-bottom: 1rem;
 }
@@ -25,8 +22,8 @@ h1{
   padding-top: 3rem;
 }
 .midPageTxt{
-  border-top: 1.5px solid @1020;
-  padding-top: 3rem;
+  // border-top: 1.5px solid @1020;
+  // padding-top: 3rem;
   margin-bottom: 2rem;
 }
 
@@ -87,4 +84,8 @@ position: absolute;
 }
 .imgText h2 {
   color: @Kitty-boots;
+}
+/// about page style
+.pAbout{
+  padding-top: 10rem;
 }
