--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,15 +1,4 @@
-a{
-  font-size: 2rem;
-  padding-right: 2rem;
-  text-decoration: none;
-  color: @1020;
-}
 
-.navBox{
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 8rem;
-  }
 
 h1, p, .midPageTxt{
   .flexCenter();
@@ -44,14 +33,15 @@ img{
   width: 100%;
 }
 
-.btn-center{
-  .flexCenter();
-}
-button{
-  .btn-mixin();
-  margin-bottom: 3rem;
-  margin-top: 3rem;
-}
+// .btn-center{
+//   .flexCenter();
+//
+// }
+// button{
+//   .btn-mixin();
+//   margin-bottom: 3rem;
+//   margin-top: 3rem;
+// }
 .fullImgTxt{
   position: relative;
   text-align: center;
