--- a/less/about.less
+++ b/less/about.less
@@ -1,105 +1,3 @@
-
-// .artsBox{
-//   display: flex;
-//   flex-direction: row;
-//   justify-content: space-around;
-// }
-// .aboutBox{
-//   display:flex;
-//   flex-direction: column;
-// }
-
-// .photoPbox{
-//   width: 33rem;
-//   height: auto;
-//   // border: 2px solid green;
-// }
-.teamBox{
-  width: 100%
-  height: auto;
-  display: flex;
-padding-top: 3rem;
-padding-bottom: 3rem;
-width: 45%;
+.aboutHome{
+  background-image: image("img/IMG_0808.jpg");
 }
-// .teamBox img{
-//   padding-right: 1rem;
-// }
-// img{
-//   width: 100%;
-// }
-//
-// .btn-center{
-//   .flexCenter();
-// }
-// button{
-//   .btn-mixin();
-//   margin-bottom: 3rem;
-//   margin-top: 3rem;
-// }
-.imgName{
-  width: 25%;
-}
-.fullImgTxt{
-  position: relative;
-  text-align: center;
-  color: white;
-  border-top: 1.5px solid @1020;
-  padding-top: 3rem;
-  margin-bottom: 2rem;
-  border-bottom: 1.5px solid @1020;
-  padding-bottom: 3rem;
-  margin-bottom: 1rem;
-}
-.imgText{
-position: absolute;
- top: 35%;
- left: 50%;
- transform: translate(-50%, -50%);
-
-}
-.imgText h2 {
-  color: @Kitty-boots;
-}
-
-.pAbout{
-  padding-top: 10rem;
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0;
-  left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-}
-.pAbout a{
-  padding: 8px 8px 8px 32px;
-text-decoration: none;
-font-size: 25px;
-color: #818181;
-display: block;
-transition: 0.3s;
-}
-.pAbout a:hover{
-  color: #f1f1f1;
-}
-.pAbout .closeAbout{
-  position: absolute;
-top: 0;
-right: 25px;
-font-size: 36px;
-margin-left: 50px;
-}
-.openAbout{
-  font-size: 20px;
-cursor: pointer;
-background-color: #111;
-color: white;
-padding: 10px 15px;
-border: none;
-}
-.openAbout:hover{
-    background-color: #444;
