--- a/less/global.less
+++ b/less/global.less
@@ -9,17 +9,30 @@ html {
 html, body {
 font-family: 'Open Sans Condensed', sans-serif;
   color: black;
+
+@media @phone {
+  margin-right: 5px;
+  margin-left: 5px;
+}
 }
 
 h1, h2, h3, h4, h5 {
 font-family: 'Amatic SC', cursive;
   color: black;
 }
+
 h1{
   font-size: 7rem;
+  padding-bottom: 2rem;
+  padding-top: 3rem;
 }
+
 h2 {
   font-size: 4.5rem;
+  
+  @media @tablet {
+    font-size: 4.5rem;
+  }
 }
 
 h3 {
@@ -29,4 +42,9 @@ h3 {
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+
+  @media @tablet {
+    width: 85%;
+    margin: 20px auto;
+  }
 }
