--- a/less/variables.less
+++ b/less/variables.less
@@ -1,13 +1,4 @@
 
-@keyframes headcolor {
-  from {
-    text-shadow: inherit;
-  }
-
-  to {
-    text-shadow: 2px 2px @Beige;
-  }
-}
 // Color pointers
 @main-border-color: @Evening-mist;
 @footer-background: @Evening-mist;
@@ -18,5 +9,7 @@
 @Button-nose: #D8B477;
 @Beige: #BA906D;
 @1020: #7B3D4C;
+@pineapple: #EDC765;
 // Mobile var
 @phone: ~"(max-width: 500px)";
+@tablet: ~"(max-width: 800px)";
