--- a/less/homepage.less
+++ b/less/homepage.less
@@ -89,6 +89,10 @@ img {
 }
 
 h3 {
+  width: 103%;
+  margin: 10px;
+  text-align: center;
+
   @media @phone {
     margin-top: 8px;
     margin-bottom: 8px;
@@ -154,8 +158,10 @@ position: absolute;
 }
 
 .imgText h2 {
-  color: @pineapple;
+  color: @Kitty-boots;
   text-shadow: 2px 2px #000000;
+  text-shadow: 3px 2px #000000;
+  font-size: 11.5rem;
 
   @media @phone {
     font-size: 4rem;
