about side bars done!!!

--- a/css/about.css
+++ b/css/about.css
@@ -123,6 +123,7 @@ section {
 
 body {
   line-height: 1;
+
 }
 
 ol,
@@ -214,6 +215,11 @@ p {
     margin: 20px auto;
   }
 }
+
+.backgroundColor{
+  background-color: #919A87;
+}
+
 .overlay {
   height: 0%;
   width: 100%;
@@ -302,6 +308,10 @@ p,
   border-bottom: 1.5px solid #7B3D4C;
   padding-bottom: 3rem;
   margin-bottom: 1rem;
+  position: absolute;
+   top: 25%;
+   left: 50%;
+   transform: translate(-50%, -50%);
 }
 
 
@@ -309,8 +319,15 @@ img {
   width: 100%;
   border-radius: 23px;
 }
-
-
+.gf{
+  border-radius: 0;
+  position: relative;
+  text-align: center;
+  color: white;
+  border-top: 1.5px solid @1020;
+  padding-top: 3rem;
+  margin-bottom: 2rem;
+}
 /* profile side  */
 .sidenav {
   height: 100%;
