--- a/less/variables.less
+++ b/less/variables.less
@@ -10,6 +10,7 @@
 @Beige: #BA906D;
 @1020: #7B3D4C;
 @pineapple: #EDC765;
+@orange: #f4511e;
 // Mobile var
 @phone: ~"(max-width: 500px)";
 @tablet: ~"(max-width: 800px)";
