--- a/less/homepage.less
+++ b/less/homepage.less
@@ -176,4 +176,10 @@ position: absolute;
     font-size: 8rem;
     width: 100%;
   }
+
+  @media @mobile {
+    font-size: 3rem;
+    margin-top: 38px;
+    text-align: center;
+  }
 }
