--- a/less/footer.less
+++ b/less/footer.less
@@ -8,8 +8,9 @@ footer{
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
-  color: black
+  color: black;
 }
+
 .fa:hover {
-  
+
 }
